--- a/NJS_PRS/package.json
+++ b/NJS_PRS/package.json
@@ -10,6 +10,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "byted-toutiao-player": "^1.6.9",
     "fs": "0.0.1-security",
     "lodash": "^4.17.5",
     "postcss-adaptive": "^0.5.0",
